WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229376
REGRESSION (
r271146
): editing/selection/ios/scrolling-to-focused-element-inside-iframe.html is failing
https://bugs.webkit.org/show_bug.cgi?id=229376
Summary
REGRESSION (r271146): editing/selection/ios/scrolling-to-focused-element-insi...
Wenson Hsieh
Reported
2021-08-21 16:26:00 PDT
rdar://80384683
Attachments
Patch
(6.09 KB, patch)
2021-08-22 13:25 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Adjust TestExpectations too
(8.68 KB, patch)
2021-08-22 13:56 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-08-22 13:25:02 PDT
Comment hidden (obsolete)
Created
attachment 436123
[details]
Patch
Wenson Hsieh
Comment 2
2021-08-22 13:56:32 PDT
Created
attachment 436124
[details]
Adjust TestExpectations too
EWS
Comment 3
2021-08-23 09:41:57 PDT
Committed
r281450
(
240832@main
): <
https://commits.webkit.org/240832@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436124
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug